--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/node": "^24.1.0",
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.3",
 		"svelte": "^5.0.0",
@@ -24,6 +26,8 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@tailwindcss/vite": "^4.1.7"
+		"@tailwindcss/vite": "^4.1.7",
+		"marked": "^16.1.1",
+		"svelte-hero-icons": "^5.2.0"
 	}
 }
